--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
-_site
-.sass-cache
-.jekyll-metadata
-Gemfile.lock
-.idea/
+# Generated files by hugo
+/public/
+/resources/_gen/
+/css/jsconfig.json
+hugo_stats.json
+
+# Executable may be added to repository
+hugo.exe
+hugo.darwin
+hugo.linux
+
+# Temporary lock file while building
+/.hugo_build.lock
