--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "themes/PaperMod"]
 	path = themes/PaperMod
-	url = https://github.com/adityatelange/hugo-PaperMod.git@v7.0
+	url = https://github.com/adityatelange/hugo-PaperMod.git
+	branch = v7.0
