--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -48,8 +48,7 @@ jobs:
               run: |
                   hugo \
                     --gc \
-                    --minify \
-                    --baseURL "${{ steps.pages.outputs.base_url }}/"
+                    --minify
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v2
               with:
@@ -58,7 +57,7 @@ jobs:
     deploy:
         environment:
             name: github-pages
-            url: ${{ steps.deployment.outputs.page_url }}
+            url: https://juftin.com
         runs-on: ubuntu-latest
         needs: build
         steps:
