--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -57,7 +57,7 @@ jobs:
     deploy:
         environment:
             name: github-pages
-            url: https://juftin.com
+            url: ${{ steps.deployment.outputs.page_url }}
         runs-on: ubuntu-latest
         needs: build
         steps:
