--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -20,7 +20,7 @@ defaults:
         shell: bash
 
 jobs:
-    build:
+    github-pages-publish:
         runs-on: ubuntu-latest
         env:
             HUGO_VERSION: 0.121.0
@@ -49,18 +49,12 @@ jobs:
                   hugo \
                     --gc \
                     --minify
-            - name: Upload artifact
-              uses: actions/upload-pages-artifact@v2
+            - name: Setup GitHub Pages
+              uses: actions/configure-pages@v4
+            - name: Upload Artifact
+              uses: actions/upload-pages-artifact@v3
               with:
-                  path: ./public
-
-    deploy:
-        environment:
-            name: github-pages
-            url: ${{ steps.deployment.outputs.page_url }}
-        runs-on: ubuntu-latest
-        needs: build
-        steps:
+                  path: public/
             - name: Deploy to GitHub Pages
               id: deployment
-              uses: actions/deploy-pages@v3
+              uses: actions/deploy-pages@v4
